--- a/ChatSample/ChatSample.csproj
+++ b/ChatSample/ChatSample.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
