--- a/SignalRSelfHost/packages.config
+++ b/SignalRSelfHost/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net48" />
-  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.4.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.2.1" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Diagnostics" version="2.1.0" targetFramework="net48" />
@@ -12,4 +12,7 @@
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="SignalR.Hosting.Common" version="0.5.2" targetFramework="net48" />
+  <package id="SignalR.Hosting.Self" version="0.5.2" targetFramework="net48" />
+  <package id="SignalR.Server" version="0.5.2" targetFramework="net48" />
 </packages>
